fixed alignment of merch slider and replaced it with generic phot

--- a/src/pages/merchandise/merchandise.scss
+++ b/src/pages/merchandise/merchandise.scss
@@ -24,4 +24,9 @@ page-merchandise {
   .swiper-pagination-bullet-active {
     background: #fff;
   }
+
+  .slide-zoom {
+    position: absolute;
+    top:20px;
+  }
 }
